--- a/works.html
+++ b/works.html
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="card">
           <div class="imgBx">
-            <img src="https://cdn.discordapp.com/attachments/976332139639472199/1159812661115105330/image.png">
+            <img src="https://cdn.discordapp.com/attachments/976332139639472199/1161713725464649749/image.png">
           </div>
           <div class="contentBx">
             <h2>MTA RolePlay</h2>
@@ -63,7 +63,7 @@
               <span>4</span>
               <span>5</span>
             </div>
-            <a href="https://t0xic911.github.io/betterrp/">Preview</a>
+            <a href="https://t0xic911.github.io/zrp1/">Preview</a>
           </div>
         </div>
       </div>
